# cs4050

./: .gitignore
exercise-2/: exercise_2.md  question_1.ipynb  question_1_a.ipynb
exercise-2/.ipynb_checkpoints/: question_1-checkpoint.ipynb  question_1_a-checkpoint.ipynb
exercise-3/: exercise_3.md
exercise-4/: exercise_4.md
homework-1/: Makefile  assn1.cpp
homework-2/: Makefile  assn2.cpp  utils.cpp  utils.hpp
homework-3/: .coafile  CMakeLists.txt  Makefile  README.md  bump_map.pgm  convert.go
homework-3/include/: color.hpp  coordinate.hpp  face.hpp  model.hpp  texture.hpp  triangle.hpp  utils.hpp
homework-3/src/: assn3.cc  color.cc  coordinate.cc  model.cc  triangle.cc  utils.cc
